<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/bg"
                android:textSize="20sp"
                android:text="@string/travellingGuideline" />

            <TextView
                android:id="@+id/query_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:textColor="@color/bg"
                android:layout_marginEnd="55dp"
                android:textSize="16sp"
                android:visibility="invisible"
                android:text="@string/back" />
            <TextView
                android:id="@+id/weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:textColor="@color/bg"
                android:layout_marginEnd="55dp"
                android:textSize="16sp"
                android:visibility="visible"
                android:text="@string/weather" />

            <com.xuexiang.xui.widget.searchview.MaterialSearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#EDEDED"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/main_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/main_refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srlEnableAutoLoadMore="true"
            app:srlEnableLoadMore="true">

        <com.scwang.smartrefresh.layout.header.ClassicsHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srlClassicsSpinnerStyle="FixedBehind"
            app:srlDrawableArrowSize="20dp"
            app:srlDrawableMarginRight="20dp"
            app:srlDrawableProgressSize="20dp"
            app:srlEnableLastTime="true"
            app:srlFinishDuration="500"
            app:srlTextSizeTime="10dp"
            app:srlTextSizeTitle="16sp"
            app:srlTextTimeMarginTop="2dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/travel_guide_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:overScrollMode="never"/>

            <com.scwang.smartrefresh.layout.footer.ClassicsFooter
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.scwang.smartrefresh.layout.SmartRefreshLayout>

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/multiple_actions_left"
            android:layout_width="80dp"
            android:layout_height="80dp"
            fab:fab_addButtonColorNormal="@color/white"
            fab:fab_addButtonColorPressed="@color/bg"
            fab:fab_addButtonPlusIconColor="@color/gray_icon"
            fab:fab_addButtonStrokeVisible="false"
            fab:fab_expandDirection="up"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="bottom|end">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                fab:fab_colorNormal="@color/white"
                fab:fab_colorPressed="@color/bg"
                app:fab_title="@string/recognize_landmark"
                app:fab_icon="@drawable/ic_round_photo_camera_24"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                fab:fab_colorNormal="@color/white"
                fab:fab_colorPressed="@color/bg"
                app:fab_title="@string/post_travel_guideline"
                app:fab_icon="@drawable/ic_round_photo_24"/>

        </com.getbase.floatingactionbutton.FloatingActionsMenu>

    </FrameLayout>
</LinearLayout>