<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <ProgressBar
        android:id="@+id/post_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/post_guideline_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                app:srcCompat="@drawable/ic_round_arrow_back_ios_blue_24"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/post_recycler_view"
                android:layout_marginTop="?attr/xui_config_content_spacing_horizontal"
                android:overScrollMode="never"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/post_guideline_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:ems="10"
                android:maxLength="10"
                android:textSize="16sp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/xui_config_color_75_pure_black"
                android:textColorHint="@color/gray_icon"
                android:inputType="text"
                android:hint="@string/write_guideline_title" />
            <EditText
                android:id="@+id/post_guideline_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:ems="10"
                android:textSize="14sp"
                android:inputType="textMultiLine"
                android:gravity="start|top"
                android:textColor="@color/xui_config_color_75_pure_black"
                android:textColorHint="@color/gray_icon"
                android:fontFamily="sans-serif-thin"
                android:minLines="8"
                android:background="@null"
                android:hint="@string/add_text" />

            <Button
                style="@style/Button.Radius"
                android:id="@+id/choose_city"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="选择城市"/>


            <EditText
                android:id="@+id/post_guideline_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:drawableStart="@drawable/ic_round_location_on_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:textSize="14sp"
                android:maxLength="10"
                android:hint="@string/add_address"
                android:inputType="text"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@color/xui_config_color_75_pure_black"
                android:textColorHint="@color/gray_icon"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp" />

            <com.xuexiang.xui.widget.textview.supertextview.SuperButton
                android:id="@+id/btn_post"
                style="@style/SuperButton.Primary.Login"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/post_guideline" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>